@@ -282,7 +282,7 @@ s3Setup'  ss u mcreds c gc
 		return (fullconfig, u)
 
 	defaulthost = do
-		(c', encsetup) <- encryptionSetup (c `M.union` defaults) gc
+		(c', encsetup) <- encryptionSetup ss (c `M.union` defaults) gc
 		pc <- either giveup return . parseRemoteConfig c'
 			=<< configParser remote c'
 		c'' <- if isAnonymous pc
